# mipt-solvers

./: CMakeLists.txt  README.md  amg_ruge_stuben.h  bicgstab.h  biharmonic.cpp  biot.cpp  bpcg.h  carriers.cpp  chebyshev.h  conjugate_gradient.h  cpr.h  csctraversal.h  csrmatrix.h  csrtriangular.h  datatype.h  deadoil.cpp  deadoil_grid.cpp  dense_matrix_routines.h  fiedler.h  fixed_stress.h  gauss_seidel.h  get_time.h  graph.h  ilduc.h  invnorm.h  jacobi.h  linked_list_graph.h  maximal_transversal.h  method.h  metis_ordering.h  mg.cpp  mlilduc.h  mlilducM.h  mlilducS.h  mlilducT.h  params.h  pcg.h  poisson.cpp  priority_queue.h  readme.txt.txt  (+12 more)
norne_tpfa/: b.mtx  x.mtx
poisson_10/: A.mtx  b.mtx  x.mtx
poisson_40/: b.mtx  x.mtx
two_wells_mfd/: A.mtx  b.mtx  x.mtx
two_wells_saddle_darcy/: A.mtx  b.mtx  x.mtx
two_wells_tpfa/: A.mtx  b.mtx  x.mtx
utils/: bicgstab.cpp  bicgstab_amg_cheb.cpp  bicgstab_amg_gs.cpp  bicgstab_amg_ilduc.cpp  bicgstab_amg_jac.cpp  bpcg_amg_gs.cpp  cg.cpp  cmpvec.cpp  conv.cpp  cpr_ts_gs_amg.cpp  cpr_ts_ilu_amg.cpp  cpr_tsgs_gs_amg.cpp  cpr_tsgs_ilu_amg.cpp  deadoil_nln.cpp  fixed_stress_amg.cpp  ilduc.cpp  mlilduc.cpp  mlilducM.cpp  mlilducS.cpp  mlilducT.cpp  mpt_ilduc.cpp  mpt_metis_ilduc.cpp  mpt_mlilduc.cpp  mpt_wrcm_ilduc.cpp  mpt_wrcm_mlilducM.cpp  mpt_wrcm_mlilducS.cpp  mpt_wrcm_mlilducT.cpp  order.cpp  pcg.cpp  pcg_amg_cheb.cpp  pcg_amg_gs.cpp  pcg_amg_ilduc.cpp  pcg_amg_jac.cpp  sink_ilduc.cpp  sink_mlilduc.cpp  sym_ilduc.cpp  sym_mlilduc.cpp  symm.cpp  uzawa_amg_gs.cpp  vanka.cpp
